# rust-sdk

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
.github/instructions/: fetch-mcp-doc.instructions.md
.github/workflows/: auto-label-pr.yml  ci.yml  clippy.yml  fmt.yml  release-plz.yml  release.yml  test.yml
crates/mcp-client/: Cargo.toml  README.md
crates/mcp-client/examples/: stdio.rs  stdio_integration.rs
crates/mcp-client/src/: client.rs  lib.rs  service.rs
crates/mcp-client/src/transport/: mod.rs  sse.rs  stdio.rs
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/: content.rs  handler.rs  lib.rs  prompt.rs  protocol.rs  resource.rs  role.rs  tool.rs
crates/mcp-macros/: Cargo.toml
crates/mcp-macros/examples/: calculator.rs
crates/mcp-macros/src/: lib.rs
crates/mcp-server/: Cargo.toml  README.md
crates/mcp-server/src/: errors.rs  lib.rs  main.rs  router.rs
crates/rmcp/: CHANGELOG.md  Cargo.toml  README.md
crates/rmcp-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/rmcp-macros/src/: common.rs  lib.rs  prompt.rs  prompt_handler.rs  prompt_router.rs  tool.rs  tool_handler.rs  tool_router.rs
crates/rmcp/src/: error.rs  lib.rs  model.rs  service.rs  transport.rs
crates/rmcp/src/handler/: client.rs  server.rs
crates/rmcp/src/handler/client/: progress.rs
crates/rmcp/src/handler/server/: common.rs  prompt.rs  router.rs  tool.rs  wrapper.rs
crates/rmcp/src/handler/server/router/: prompt.rs  tool.rs
crates/rmcp/src/handler/server/wrapper/: json.rs  parameters.rs
crates/rmcp/src/model/: annotated.rs  capabilities.rs  content.rs  meta.rs  prompt.rs  resource.rs  tool.rs
crates/rmcp/src/service/: client.rs  server.rs  tower.rs
crates/rmcp/src/transport/: async_rw.rs  auth.rs  child_process.rs  common.rs  io.rs  sink_stream.rs  sse.rs  sse_auth.rs  sse_client.rs  sse_server.rs  streamable_http_client.rs  streamable_http_server.rs  tower.rs  worker.rs
crates/rmcp/src/transport/common/: axum.rs  client_side_sse.rs  reqwest.rs  server_side_http.rs
crates/rmcp/src/transport/common/auth/: sse_client.rs  streamable_http_client.rs
crates/rmcp/src/transport/common/reqwest/: sse_client.rs  streamable_http_client.rs
crates/rmcp/src/transport/streamable_http_server/: axum.rs  session.rs  tower.rs
crates/rmcp/src/transport/streamable_http_server/session/: local.rs
crates/rmcp/tests/: test_completion.rs  test_complex_schema.rs  test_elicitation.rs  test_embedded_resource_meta.rs  test_json_schema_detection.rs  test_logging.rs  test_message_protocol.rs  test_message_schema.rs  test_notification.rs  test_progress_subscriber.rs  test_prompt_handler.rs  test_prompt_macro_annotations.rs  test_prompt_macros.rs  test_prompt_routers.rs  test_resource_link.rs  test_resource_link_integration.rs  test_sampling.rs  test_structured_output.rs  test_tool_builder_methods.rs  test_tool_macro_annotations.rs  test_tool_macros.rs  test_tool_result_meta.rs  test_tool_routers.rs  test_with_js.rs  test_with_python.rs
crates/rmcp/tests/common/: calculator.rs  handlers.rs
crates/rmcp/tests/test_message_schema/: client_json_rpc_message_schema.json  client_json_rpc_message_schema_current.json  server_json_rpc_message_schema.json  server_json_rpc_message_schema_current.json
crates/rmcp/tests/test_with_js/: client.js  package.json  server.js  streamable_client.js
crates/rmcp/tests/test_with_python/: .gitignore  client.py  pyproject.toml  server.py
docs/: CONTRIBUTE.MD  OAUTH_SUPPORT.md
docs/readme/: README.zh-cn.md
examples/: README.md
examples/clients/: Cargo.toml  README.md
examples/clients/src/: clients.rs  collection.rs  collection_stdio.rs  everything_stdio.rs  git_stdio.rs  oauth_client.rs  progress_client.rs  sampling_stdio.rs  sse.rs  std_io.rs  stdio_integration.rs  streamable_http.rs
examples/clients/src/auth/: oauth_client.rs
examples/macros/: Cargo.toml
examples/mcp_client_custom_wit/: Cargo.toml  README.md
examples/mcp_client_custom_wit/src/: lib.rs
examples/mcp_client_custom_wit/wit/: world.wit
examples/mcp_client_stdio_wasm/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
examples/mcp_client_stdio_wasm/src/: lib.rs
examples/rig-integration/: Cargo.toml
examples/rig-integration/src/: chat.rs  config.rs  main.rs  mcp_adaptor.rs
examples/rig-integration/src/config/: mcp.rs
examples/servers/: Cargo.toml  README.md
examples/servers/src/: actix_web.rs  axum.rs  axum_router.rs  completion_stdio.rs  complex_auth_sse.rs  counter_hyper_streamable_http.rs  counter_server.rs  counter_streamhttp.rs  elicitation_stdio.rs  generic_service.rs  mcp_oauth_server.rs  progress_demo.rs  prompt_stdio.rs  sampling_stdio.rs  std_io.rs  structured_output.rs  wasi_std_io.rs
examples/servers/src/common/: calculator.rs  counter.rs  generic_service.rs  jsonrpc_frame_codec.rs  mod.rs  progress_demo.rs
examples/simple-chat-client/: Cargo.toml  README.md
examples/simple-chat-client/src/: chat.rs  client.rs  config.rs  config.toml  model.rs  tool.rs
examples/transport/: Cargo.toml  README.md
examples/transport/src/: http_upgrade.rs  stdio-mcp.rs  stdio-tokio.rs  stdio.rs  tcp.rs  unix_socket.rs  websocket.rs
examples/transport/src/common/: calculator.rs
examples/wasi/: Cargo.toml  README.md
examples/wasi/src/: calculator.rs  lib.rs
