[workspace]
members = ["crates/rmcp", "crates/rmcp-macros", "examples/*"]
resolver = "2"

[workspace.dependencies]
rmcp = { version = "0.7.0", path = "./crates/rmcp" }
rmcp-macros = { version = "0.7.0", path = "./crates/rmcp-macros" }

[workspace.package]
edition = "2024"
version = "0.7.0"
authors = ["4t145 <u4t145@163.com>"]
license = "MIT"
repository = "https://github.com/modelcontextprotocol/rust-sdk/"
description = "Rust SDK for Model Context Protocol"
keywords = ["mcp", "sdk", "tokio", "modelcontextprotocol"]
homepage = "https://github.com/modelcontextprotocol/rust-sdk"
categories = [
    "network-programming",
    "asynchronous",
]
readme = "README.md"
