[package]
name = "mcp-server"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Server SDK for the Model Context Protocol"

[dependencies]
anyhow = "1.0.94"
thiserror = "1.0"
mcp-core = { workspace = true }
mcp-macros = { workspace = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
schemars = "0.8"
tokio = { version = "1", features = ["io-util"] }
tower = { version = "0.4", features = ["timeout"] }
tower-service = "0.3"
futures = "0.3"
pin-project = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
async-trait = "0.1"
