

[package]
name = "mcp-client-examples"
version = "0.1.5"
edition = "2024"
publish = false

[dependencies]
rmcp = { path = "../../crates/rmcp", features = [
    "client",
    "transport-sse",
    "transport-streamable-http-client",
    "transport-child-process",
    "tower",
    "auth"
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
futures = "0.3"
anyhow = "1.0"
url = "2.4"
tower = "0.5"
axum = "0.8"
reqwest = "0.12"

[[example]]
name = "clients_sse"
path = "src/sse.rs"

[[example]]
name = "clients_std_io"
path = "src/std_io.rs"

[[example]]
name = "clients_streamable_http"
path = "src/streamable_http.rs"

[[example]]
name = "clients_everything_stdio"
path = "src/everything_stdio.rs"

[[example]]
name = "clients_collection"
path = "src/collection.rs"

[[example]]
name = "oauth_client"
path = "src/oauth_client.rs"