[package]
name = "mcp-macros-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mcp-core = { path = "../../crates/mcp-core" }
mcp-macros = { path = "../../crates/mcp-macros" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
schemars = "0.8"

[[example]]
name = "calculator"
path = "src/calculator.rs"
