[package]
name = "mcp_client_custom_wit"
version = "0.6.1"
edition = "2021"
description = "Custom WIT-based MCP client WASM component"

[lib]
crate-type = ["cdylib"]

[dependencies]
rmcp = { path = "../../crates/rmcp", features = ["client"] }
tokio = { version = "1.41", features = ["sync", "macros", "io-util", "rt", "time"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WIT bindings
wit-bindgen = "0.36"

[dependencies.wasi]
version = "0.14"
features = [
    "std",
]

[package.metadata.component]
package = "example:mcp-client"

[package.metadata.component.dependencies]
