[package]
name = "mcp_client_stdio_wasm"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "WASM MCP client using WASI stdio transport"
keywords = { workspace = true }
homepage = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasi = { version = "0.14.2"}
tokio = { version = "1", features = ["rt", "io-util", "sync", "macros", "time"] }
rmcp = { workspace = true, features = ["client"] }
serde = { version  = "1", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing = "0.1"
