[package]
name = "rig-integration"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
rig-core = "0.10.0"
tokio = { version = "1", features = ["full"] }
rmcp = { path = "../../crates/rmcp", features = [
    "client",
    "transport-child-process",
    "transport-sse",
] }
anyhow = "1.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing-appender = "0.2"
