[package]
name = "rig-integration"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }
publish = false

[dependencies]
rig-core = "0.14.0"
tokio = { version = "1", features = ["full"] }
rmcp = { workspace = true, features = [
    "client",
    "reqwest",
    "transport-child-process",
    "transport-sse-client",
    "transport-streamable-http-client"
] }
anyhow = "1.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing-appender = "0.2"
