

[package]
name = "mcp-server-examples"
version = "0.1.5"
edition = "2024"
publish = false

[dependencies]
rmcp= { path = "../../crates/rmcp", features = ["server", "transport-sse-server", "transport-io", "transport-streamable-http-server", "auth"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
futures = "0.3"
rand = { version = "0.8", features = ["std"] }
axum = { version = "0.8", features = ["macros"] }
schemars = { version = "0.8", optional = true }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
serde_urlencoded = "0.7"
askama = { version = "0.14"}

# [dev-dependencies.'cfg(target_arch="linux")'.dependencies]

[dev-dependencies]
tokio-stream = { version = "0.1" }
# tokio-util = { version = "0.7", features = ["io", "codec"] }
tokio-util = { version = "0.7", features = ["codec"] }

[[example]]
name = "servers_std_io"
path = "src/std_io.rs"

[[example]]
name = "servers_axum"
path = "src/axum.rs"

[[example]]
name = "servers_axum_router"
path = "src/axum_router.rs"

[[example]]
name = "servers_generic_server"
path = "src/generic_service.rs"

[[example]]
name = "servers_axum_streamable_http"
path = "src/axum_streamable_http.rs"

[[example]]
name = "servers_auth_sse"
path = "src/auth_sse.rs"

[[example]]
name = "mcp_oauth_server"
path = "src/mcp_oauth_server.rs"